<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/transparent">

    <com.chelinvest.notification.ui.custom.stylable.CustomTextView
        android:id="@+id/shortServerNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorLightBrown"
        android:textColor="@color/text_bright"
        android:text="stub"
        android:textSize="@dimen/branch_titel"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/branchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/shortServerNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>