...
    <string name="choose_attr_value">Выберите значение атрибута \'%1$s\':</string>
    <string name="menu_limits">Лимиты</string>
    <string name="menu_branches">Уведомления</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ruble">₽</string>
    <string name="cancel">Отмена</string>
    <string name="edit_continue">Продолжить</string>
    <string name="delete_subscr_text">Удалить подписку?</string>
    <string name="change_active_subscr_text">Активировать подписку?</string>
    <string name="change_deactive_subscr_text">Деактивировать подписку?</string>
    <string name="empty_description_error">Описание подписки не может быть пустым!</string>
    <string name="create_subscr_text">Создать подписку?</string>
...

    <!-- login -->
    <string name="login_name_title">Имя пользователя</string>
    <string name="login_pass_title">Пароль</string>
    <string name="login_check_input_user">Введите имя пользователя</string>
    <string name="login_check_input_pass">Введите пароль</string>
    <string name="login_button">Войти</string>
    <string name="login_checking">проверка</string>

    <!--Failure messages-->
    <string name="error_404">Нет соединения, оффлайн режим</string>
    <string name="error_host">Сервер недоступен, оффлайн режим</string>

...
