<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/cardItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/recyclerItemBackColor"
        android:padding="4dp"
        android:text="@string/subscr_subtitle_text"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="@dimen/branch_list_item_text_size" />

</FrameLayout>