package com.chelinvest.notification.ui.main


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.filters.LargeTest
import androidx.test.internal.runner.junit4.AndroidJUnit4ClassRunner
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import com.chelinvest.notification.R
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4ClassRunner::class)
class RecordedMainActivityTest {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(MainActivity::class.java)

    @Test
    fun mainActivityTest() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        //Thread.sleep(7000)

        val customEditText = onView(allOf(withId(R.id.vEditText),
            childAtPosition(childAtPosition(withId(R.id.userEditText), 0), 1),
            isDisplayed()))
        customEditText.perform(replaceText("pam"), closeSoftKeyboard())

        val customEditText2 = onView(allOf(withId(R.id.vEditText),
            childAtPosition(childAtPosition(withId(R.id.passEditText), 0), 1),
            isDisplayed()))
        customEditText2.perform(replaceText("ceramica1"), closeSoftKeyboard())

        val appCompatButton = onView(allOf(withId(R.id.loginButton),
            withText("Войти"),
            childAtPosition(allOf(withId(R.id.vLoginLayout),
                childAtPosition(withId(R.id.vParentLayout), 0)), 5),
            isDisplayed()))
        appCompatButton.perform(click())

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        //Thread.sleep(2000)

        //pressBack()  // with single activity it pressed back and killed the app
    }

    private fun childAtPosition(parentMatcher: Matcher<View>, position: Int): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent) && view == parent.getChildAt(
                    position)
            }
        }
    }
}
